fixed gradient of wallpaper on smaller screen

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -12,9 +12,21 @@ h3 {
 	background-color: black;
 }
 
+.topnav {
+	width: 100%;
+}
+
 .nav li a {
-	color: white;
-	font-size: 22px;
+	color: black;
+	
+}
+.navbar-home {
+	float: left;
+	height: 50px;
+	padding: 15px 15px;
+	line-height: 20px;
+	font-size: 2em;
+	border: 1px solid red;
 }
 
 #nav  {
@@ -46,17 +58,18 @@ h3 {
 	background-position: center;
 	text-align: center;
 	
-	
 }
 
 @media (max-width: 400px) {
 	.wallpaper {
+
 		border: 1px solid green;
 		background-position: right 35% bottom 0px;
-		
+
 	}
 }
 /* Source: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Images/Using_CSS_gradients*/
+
 @media (max-width: 400px) {
 	.gradient {
 		/*The old syntax, deprecated and prefixed, for old browsers*/
@@ -66,6 +79,7 @@ h3 {
 		/*The new syntax needed by standard-compliant browsers (Opera 12.1,
 		 IE 10, Firefox 16, Chrome 26, Safari 6.1), without prefix*/
 		background-image: linear-gradient(hsla(0, 0%, 100%, 0.3), #fcc600), url("../images/intro-photo-1.jpg") ;
+
 	}	
 }
 /* #home h1 h4 h2 {
@@ -78,8 +92,8 @@ h3 {
 
 
 .welcome {
-	padding-top: 45%;
-	padding-bottom:10%;
+	padding-top: 30%;
+	padding-bottom:30%;
 	align-items: center;
 	justify-content: center;
 	font-family: Arial;
@@ -94,15 +108,15 @@ h3 {
 }
 
 .welcome h1 {
-	font-size: 5em;
+	font-size: 6em;
 }
 
 .welcome p {
-	font-size: 2em;
+	font-size: 3em;
 }
 
 .welcome h2 {
-	font-size: 3em;
+	font-size: 4em;
 }
 
 .btn {
